# TwitchIO

./: .gitignore  .readthedocs.yml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  blah.py  mkdocs.yml  newtest.py  parse.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test.py  testing-v3.py  testing.py  websocket.py
._audio_wheels/: PyAudio-0.2.11-cp310-cp310-win32.whl  PyAudio-0.2.11-cp310-cp310-win_amd64.whl  PyAudio-0.2.11-cp37-cp37m-win32.whl  PyAudio-0.2.11-cp37-cp37m-win_amd64.whl  PyAudio-0.2.11-cp38-cp38-win32.whl  PyAudio-0.2.11-cp39-cp39-win32.whl  PyAudio-0.2.11-cp39-cp39-win_amd64.whl
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_request.yml
.github/pages/: cf-pages.sh
.github/workflows/: black.yml  build.yml  coverage_and_lint.yml  coverage_lint_build.yml  edit_version.py  get_revision.py  issues.yml  publish.yml  signoff.yml
docs/: Makefile  awaitableasynciterator.rst  changelog.rst  conf.py  faq.rst  index.md  index.rst  installing.rst  make.bat  pa.txt  quickstart.rst  reference.rst  requirements.txt  tokens.rst  twitchio.commands.rst  twitchio.rst
docs/_extensions/: aiter.py  attributetable.py  details.py  exc_hierarchy.py  sig_prefix.py
docs/_static/: codeblocks.css  custom.css  custom.js  style.css
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/_static/styles/: furo.css
docs/_templates/: layout.html
docs/extensions/: attributetable.py
docs/extensions/commands/: placehold.md
docs/extensions/routines/: placehold.md
docs/exts/: commands.rst  eventsub.rst  index.rst  pubsub.rst  routines.rst  sounds.rst  webhooks.rst
docs/exts/commands/: api.rst  autobot.rst  bot.rst  components.rst  core.rst  exceptions.rst  index.rst
docs/exts/overlays/: index.rst
docs/exts/routines/: index.rst
docs/exts/sounds/: index.rst
docs/getting-started/: authenticating.md  changelog.rst  debugging.rst  documentation.md  faq.rst  installing.md  installing.rst  migrating.md  migrating.rst  quickstart.md  quickstart.rst
docs/guides/: commandparsing.rst  eventsub.md
docs/javascripts/: extra.js
docs/references/: asset.md  assets.md  authenticating.rst  client.md  client.rst  enums_etc.rst  events.md  events.rst  eventsub_models.rst  eventsub_subscriptions.rst  exceptions.rst  models.md  models.rst  payloads.md  user.rst  utils.md  utils.rst  web.rst
docs/references/conduits/: clients.rst  index.rst  models.rst
docs/references/events/: events.rst  general.md  index.rst  oauth.md
docs/references/eventsub/: eventsub_models.rst  index.rst
docs/references/helix/: helix_models.rst  index.rst
docs/references/models/: ads.md  analytics.md  bits.md  ccl.md  channel_points.md  channels.md  charity.md  chat.md  clips.md  entitlements.md  eventsub.md  games.md  goals.md  hype_train.md  moderation.md  polls.md  predictions.md  raids.md  schedule.md  search.md  streams.md  subscriptions.md  teams.md  videos.md
docs/references/users/: chatter.rst  index.rst  partialuser.rst  user.rst
docs/references/utils/: asset.md  colour.md  scopes.md
docs/source/: conf.py
docs/source/_templates/: layout.html
docs/stylesheets/: extra.css
docs/templates/python/material/: class.html  function.html  (+1 more)
examples/: basic_bot.py  basic_routine.py  discord_integration.py  eventsub.py  music_queue.py  subclass_bot.py
examples/alpha_example/: main.py
examples/basic_bot/: main.py
examples/basic_conduits/: main.py
examples/basic_routines/: main.py
examples/device_code_flow/: bot.py
examples/module_examples/standard/: main.py
examples/simple_conduit/: main.py
twitchio/: __init__.py  __main__.py  _version.py  abc.py  abcs.py  assets.py  backoff.py  base.py  cache.py  channel.py  chatter.py  client.py  clients.py  connection.py  cooldowns.py  dataclasses.py  dataclasses.pyi  dispatcher.py  enums.py  errors.py  events.pyi  exceptions.py  http.py  limiter.py  message.py  models.py  parse.py  parser.py  payloads.py  rewards.py  shards.py  tokens.py  user.py  utils.py  version.py  webhook.py  websocket.py  websockets.py
twitchio/authentication/: __init__.py  oauth.py  payloads.py  scopes.py  tokens.py
twitchio/commands/: __init__.py  bot.py  command.py  core.py  errors.py  stringparser.py
twitchio/conduits/: __init__.py  enums.py  payloads.py  pool.py  websockets.py
twitchio/eventsub/: __init__.py  conditions.py  conduits.py  enums.py  payloads.py  subscriptions.py  websockets.py
twitchio/eventsub/models/: user.py
twitchio/ext/commands/: __init__.py  bot.py  builtin_converter.py  cogs.py  commands.py  components.py  context.py  converters.py  cooldowns.py  core.py  errors.py  exceptions.py  meta.py  stringparser.py  translators.py  types_.py  utils.py  view.py
twitchio/ext/components/: __init__.py
twitchio/ext/eventsub/: __init__.py  http.py  models.py  server.py  websocket.py
twitchio/ext/overlays/: __init__.py  adapters.py  core.py  enums.py  exceptions.py  starlette_adapter.py  types_.py
twitchio/ext/pubsub/: __init__.py  models.py  pool.py  topics.py  websocket.py
twitchio/ext/routines/: __init__.py
twitchio/ext/sounds/: __init__.py  audioqueuemanager.py  queuemanager.py
twitchio/ext/webhooks/: __init__.py  blueprint.py  dispatcher.py  utils.py
twitchio/http/: __init__.py  clients.py  routes.py
twitchio/models/: __init__.py  _reward_settings.py  ads.py  analytics.py  bits.py  ccls.py  channel_points.py  channels.py  charity.py  chat.py  clips.py  entitlements.py  eventsub.py  eventsub_.py  games.py  goals.py  guest_star.py  hype_train.py  moderation.py  polls.py  predictions.py  raids.py  schedule.py  search.py  streams.py  subscriptions.py  teams.py  videos.py
twitchio/models_test/: channel_points.py
twitchio/types/: extensions.py  payloads.py
twitchio/types_/: __init__.py  clients.py  colours.py  conduits.py  eventsub.py  http.py  options.py  requests.py  responses.py  tokens.py
twitchio/web/: __init__.py  adapters.py  aio_adapter.py  html.py  starlette_adapter.py  utils.py
(+13 files in other folders)
