[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "TwitchIO"
authors = [
    { name = "Evie. P.", email = "evieepy@gmail.com" },
    { name = "Chillymosh" },
]
maintainers = [
    { name = "Evie. P.", email = "evieepy@gmail.com" },
    { name = "Chillymosh"},
]
dynamic = ["version"]
description = "A powerful, asynchronous Python library for twitch.tv."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = { file = "LICENSE"}
dependencies = ["picows>=1.17.0"]

[project.urls]
Homepage = "https://github.com/TwitchIO/TwitchIO"
Documentation = "https://twitchio.dev"
Changelog = "https://twitchio.dev/en/latest/getting-started/changelog.html"
"Issue tracker" = "https://github.com/TwitchIO/TwitchIO/issues"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "twitchio/__init__.py"
fallback_version = "4.0.0a"

[tool.ruff]
line-length = 125
target-version = "py312"
indent-width = 4
exclude = ["venv", ".venv", ".venv*", "docs"]

[tool.ruff.lint]
select = [
    "C4",
    "E",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TC",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN401",
    "UP031",
    "PTH123",
    "E203",
    "E501",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = [
    ".venv",
    "venv",
    "docs",
    "examples", 
    "twitchio/__main__.py", 
    "twitchio/version.py", 
    "**/node_modules", 
    "**/__pycache__", 
    "**/.*"
]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "pdm>=2.26.7",
    "ruff>=0.15.7",
    "pyright>=1.1.408",
]
