[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "TwitchIO"
authors = [
    { name = "Evie. P.", email = "evieepy@gmail.com" },
    { name = "Chillymosh" },
]
maintainers = [
    { name = "Evie. P.", email = "evieepy@gmail.com" },
    { name = "Chillymosh"},
]
version = "4.0.0a"
description = "A powerful, asynchronous Python library for twitch.tv."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = { file = "LICENSE"}
dependencies = ["picows>=1.17.0"]

[project.urls]
Homepage = "https://github.com/TwitchIO/TwitchIO"
Documentation = "https://twitchio.dev"
Changelog = "https://twitchio.dev/en/latest/getting-started/changelog.html"
"Issue tracker" = "https://github.com/TwitchIO/TwitchIO/issues"

[tool.uv.build-backend]
module-name = "twitchio"
module-root = ""

[tool.ruff]
line-length = 125
target-version = "py312"
indent-width = 4
exclude = ["venv", ".venv", ".venv*", "docs"]

[tool.ruff.lint]
select = [
    "C4",    # flake8-comprehensions (C4)
    "E",     # pycodestyle Error (E)
    "F",     # Pyflakes (F)
    "G",     # flake8-logging-format (G)
    "I",     # isort (I)
    "PTH",   # flake8-use-pathlib (PTH)
    "RUF",   # Ruff-specific rules (RUF)
    "SIM",   # flake8-simplify (SIM)
    "TC",    # flake8-type-checking (TC)
    "UP",    # pyupgrade (UP)
    "W",     # pycodestyle Warning (W)
    "PERF",  # Perflint (PERF)
    "ANN",   # flake8-annotations (ANN)
]
ignore = [
    "F402",     # import-shadowed-by-loop-var
    "F403",     # undefined-local-with-import-star
    "F405",     # undefined-local-with-import-star-usage
    "PERF203",  # try-except-in-loop
    "RUF001",   # ambiguous-unicode-character-string
    "RUF009",   # function-call-in-dataclass-default-argument
    "SIM105",   # suppressible-exception
    "UP034",    # extraneous-parentheses
    "ANN401",   # any-type
    "PTH123",
    "E203",     # whitespace-before-punctuation
    "E501",     # line-too-long
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
exclude = [
    ".venv",
    "venv",
    "docs",
    "examples", 
    "twitchio/__main__.py", 
    "twitchio/version.py", 
    "**/node_modules", 
    "**/__pycache__", 
    "**/.*"
]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false
pythonVersion = "3.12"

[dependency-groups]
dev = [
    "pdm>=2.26.7",
    "ruff>=0.15.7",
    "pyright>=1.1.408",
]
